--- a/styles/style.css
+++ b/styles/style.css
@@ -123,9 +123,8 @@ nav > ul > li > a:active {
 	padding: 1em;
 	background: rgba(132, 117, 78, 0.8);
 	border-radius: 6px;
-	margin-top: 150px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
+	min-width: 250px;
 }
 
 .banner-main {
