update html and css

--- a/styles/style.css
+++ b/styles/style.css
@@ -265,6 +265,10 @@ nav > ul > li > a:active {
 }
 /* End of About CSS */
 
+/* Gallery CSS */
+
+/* End of Gallery CSS */
+
 /* contact CSS */
 #contact {
   padding: 6em 0px;
