--- a/styles/style.css
+++ b/styles/style.css
@@ -21,14 +21,14 @@ header {
   left: 0;
   position: fixed;
   width: 100vw;
-  height: 75px;
+  height: 100px;
   opacity: 0.8;
   z-index: 999;
 }
 
 .header-main {
   position: relative;
-  height: 75px;
+  height: 100px;
 }
 
 .logo {
@@ -37,8 +37,15 @@ header {
 }
 
 .logo > a {
+
   text-decoration: none;
   display: block;
+}
+
+.logo > a > h3 {
+  padding: 0.5em 1em 0.5em 1em;
+  float: right;
+
 }
 
 nav {
